<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="none">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_losung_week"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_losung_week" />

        <item
            android:id="@+id/nav_losung_month"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_losung_month" />

        <item
            android:id="@+id/nav_losung_year"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_losung_year" />

    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_all_notes"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/nav_all_notes" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_info" />

    </group>

</menu>